# cytologia-app

./: .gitignore  index.html  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: release.yml
public/: raport-form.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BadanieDetail.tsx  BadanieForm.tsx  HistoriaList.tsx  UstawieniaModal.tsx
src/lib/: db.ts  logo.ts  pdf.ts  types.ts
src/lib/fonts/: Arial-Bold.ts  Arial-Regular.ts
